release: prepare Engine v1.1
